# neo-n4

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODEX_AUDIT_REPORT.md  CONTRIBUTING.md  Cargo.toml  Directory.Build.props  IMPLEMENTATION_STATUS.md  LICENSE  Neo.L2.sln  README.md  SECURITY.md  TASKS.md  TECH_STACK.md  WHITEPAPER.md  book.toml  coverage.runsettings  doc.md
bridge/neo-execution-core/: Cargo.toml  README.md  README.zh.md
bridge/neo-execution-core/docs/: learning-guide.md  learning-guide.zh.md
bridge/neo-execution-core/docs/figures/: api-surface.mmd  api-surface.zh.mmd  architecture.mmd  architecture.zh.mmd  dataflow.mmd  dataflow.zh.mmd  dependency-map.mmd  dependency-map.zh.mmd  implementation-atlas.mmd  implementation-atlas.zh.mmd  integration-map.mmd  integration-map.zh.mmd  lifecycle.mmd  lifecycle.zh.mmd  module-map.mmd  module-map.zh.mmd  position.mmd  position.zh.mmd  principles.mmd  principles.zh.mmd  proof-flow.mmd  proof-flow.zh.mmd  state-model.mmd  state-model.zh.mmd  test-map.mmd  test-map.zh.mmd  trust-boundaries.mmd  trust-boundaries.zh.mmd  workflow.mmd  workflow.zh.mmd
bridge/neo-execution-core/src/: batch.rs  hashing.rs  lib.rs  manifest.rs  native.rs  transaction.rs  types.rs  wire.rs
bridge/neo-execution-core/src/types/: batch_request.rs  batch_result.rs  constants.rs  execution_error.rs  l1_message.rs  vm_execution_receipt.rs
bridge/neo-execution-core/tests/: batch_core.rs
bridge/neo-zkvm-bridge/: Cargo.toml  README.md
bridge/neo-zkvm-bridge/src/: lib.rs
bridge/neo-zkvm-gateway-guest/: Cargo.toml  README.md  README.zh.md  batch_vk_manifest.rs  build.rs  vk_manifest.rs
bridge/neo-zkvm-gateway-guest/src/: lib.rs  main.rs
bridge/neo-zkvm-gateway-host/: Cargo.toml  README.md  README.zh.md  build.rs
bridge/neo-zkvm-gateway-host/src/: daemon.rs  lib.rs  protocol.rs  prover.rs
bridge/neo-zkvm-gateway-host/tests/: real_recursive_release_gate.rs
bridge/neo-zkvm-guest/: Cargo.toml  README.md  README.zh.md  vk_manifest.rs
bridge/neo-zkvm-guest/docs/: learning-guide.md  learning-guide.zh.md
bridge/neo-zkvm-guest/docs/figures/: api-surface.mmd  api-surface.zh.mmd  architecture.mmd  architecture.zh.mmd  dataflow.mmd  dataflow.zh.mmd  dependency-map.mmd  dependency-map.zh.mmd  implementation-atlas.mmd  implementation-atlas.zh.mmd  integration-map.mmd  integration-map.zh.mmd  lifecycle.mmd  lifecycle.zh.mmd  module-map.mmd  module-map.zh.mmd  position.mmd  position.zh.mmd  principles.mmd  principles.zh.mmd  proof-flow.mmd  proof-flow.zh.mmd  state-model.mmd  state-model.zh.mmd  test-map.mmd  test-map.zh.mmd  trust-boundaries.mmd  trust-boundaries.zh.mmd  workflow.mmd  workflow.zh.mmd
bridge/neo-zkvm-guest/examples/: generate_stateful_fixture.rs  rekey_fixture.rs
bridge/neo-zkvm-guest/src/: lib.rs  main.rs  runtime.rs
bridge/neo-zkvm-guest/tests/: native_executor_cli.rs  stateful_execution.rs
bridge/neo-zkvm-guest/tests/fixtures/: native_execution_output_v1.hex  native_transition_v1.hex  stateful_batch_v1.hex
bridge/neo-zkvm-host/: Cargo.toml  README.md  README.zh.md  build.rs
bridge/neo-zkvm-host/docs/: learning-guide.md  learning-guide.zh.md
bridge/neo-zkvm-host/docs/figures/: api-surface.mmd  api-surface.zh.mmd  architecture.mmd  architecture.zh.mmd  dataflow.mmd  dataflow.zh.mmd  dependency-map.mmd  dependency-map.zh.mmd  implementation-atlas.mmd  implementation-atlas.zh.mmd  integration-map.mmd  integration-map.zh.mmd  lifecycle.mmd  lifecycle.zh.mmd  module-map.mmd  module-map.zh.mmd  position.mmd  position.zh.mmd  principles.mmd  principles.zh.mmd  proof-flow.mmd  proof-flow.zh.mmd  state-model.mmd  state-model.zh.mmd  test-map.mmd  test-map.zh.mmd  trust-boundaries.mmd  trust-boundaries.zh.mmd  workflow.mmd  workflow.zh.mmd
bridge/neo-zkvm-host/examples/: generate_groth16_release_vector.rs
bridge/neo-zkvm-host/src/: execution_result.rs  lib.rs  proof_result.rs  recursive_child_result.rs  zk_execution_result.rs
bridge/neo-zkvm-host/tests/: end_to_end.rs  groth16_release_vector.rs  source_layout.rs  sp1_build_support.rs
sdk/python/: README.md  README.zh.md  pyproject.toml
sdk/python/neo_n4_sdk/: __init__.py
sdk/python/tests/: run_conformance.py  test_client.py  test_conformance_live.py  test_conformance_offline.py
sdk/rust/: Cargo.toml  README.md  README.zh.md
sdk/rust/docs/: learning-guide.md  learning-guide.zh.md
sdk/rust/docs/figures/: api-surface.mmd  api-surface.zh.mmd  architecture.mmd  architecture.zh.mmd  dataflow.mmd  dataflow.zh.mmd  dependency-map.mmd  dependency-map.zh.mmd  implementation-atlas.mmd  implementation-atlas.zh.mmd  integration-map.mmd  integration-map.zh.mmd  lifecycle.mmd  lifecycle.zh.mmd  module-map.mmd  module-map.zh.mmd  position.mmd  position.zh.mmd  principles.mmd  (+11 more)
sdk/rust/src/: batch_status_response.rs  deposit_status_response.rs  l2_batch_view.rs  lib.rs  security_label_response.rs  security_level_response.rs  wire.rs
sdk/rust/tests/: conformance_live.rs  conformance_offline.rs  integration.rs
watchers/neo-bridge-watcher-eth/: Cargo.toml  Dockerfile  README.md  README.zh.md
watchers/neo-bridge-watcher-eth/deploy/: README.md  k8s.yaml  neo-bridge-watcher.service
watchers/neo-bridge-watcher-eth/docs/: learning-guide.md  learning-guide.zh.md
watchers/neo-bridge-watcher-eth/src/: chains.rs  core.rs  event_source.rs  journal.rs  lib.rs  messaging.rs  proof.rs  signer.rs  submitter.rs
watchers/neo-bridge-watcher-eth/tests/: daemon_run_loop_smoke.rs  parity.rs  preflight_smoke.rs
watchers/neo-bridge-watcher-sol/: Cargo.toml  README.md  README.zh.md
watchers/neo-bridge-watcher-sol/docs/: learning-guide.md  learning-guide.zh.md
watchers/neo-bridge-watcher-sol/src/: lib.rs
watchers/neo-bridge-watcher-sol/tests/: parity.rs
watchers/neo-bridge-watcher-tron/: Cargo.toml  README.md  README.zh.md
watchers/neo-bridge-watcher-tron/docs/: learning-guide.md  learning-guide.zh.md
watchers/neo-bridge-watcher-tron/src/: lib.rs
watchers/neo-bridge-watcher-tron/tests/: parity.rs
(+1233 files in other folders)
