[workspace]
resolver = "2"
members = [
    "bridge/neo-zkvm-guest",
    "bridge/neo-zkvm-host",
    "sdk/rust",
    "watchers/neo-bridge-watcher-eth",
    "watchers/neo-bridge-watcher-sol",
    "watchers/neo-bridge-watcher-tron",
]
# Vendored Neo Rust crates live under external/ as git submodules. They keep
# their own workspaces (external/neo-zkvm, external/neo-riscv-vm) so we
# explicitly exclude them from this top-level workspace to avoid Cargo
# attempting to resolve them as members.
exclude = [
    "external",
]

# Defaults shared by every workspace member.
[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/r3e-network/neo-n4"
