[workspace]
resolver = "2"
members = [
    "bridge/neo-execution-core",
    "bridge/neo-zkvm-gateway-guest",
    "bridge/neo-zkvm-gateway-host",
    "bridge/neo-zkvm-guest",
    "bridge/neo-zkvm-host",
    "sdk/rust",
    "watchers/neo-bridge-watcher-eth",
    "watchers/neo-bridge-watcher-sol",
    "watchers/neo-bridge-watcher-tron",
]
# Vendored Neo Rust crates live under external/ as git submodules. They keep
# their own workspaces (external/neo-zkvm, external/neo-riscv-vm) so we
# explicitly exclude them from this top-level workspace to avoid Cargo
# attempting to resolve them as members.
exclude = [
    "external",
]

# Defaults shared by every workspace member.
[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/r3e-network/neo-n4"
rust-version = "1.85"

[workspace.dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
