[package]
name = "neo-execution-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Backend-agnostic Neo L2 batch execution primitives shared by fast RISC-V runners and zkVM guests."

[dependencies]
sha2 = { version = "0.11", default-features = false }
thiserror = { version = "2.0", default-features = false }
