[package]
name = "neo-execution-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Backend-agnostic Neo L2 batch execution primitives shared by fast RISC-V runners and zkVM guests."

[dependencies]
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
ripemd = { version = "0.1", default-features = false }
p256 = { version = "0.13", default-features = false, features = ["arithmetic"] }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.11", default-features = false }
thiserror = { version = "2.0", default-features = false }
