[package]
name = "neo-zkvm-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "C ABI bridge from C# (Neo.L2.Proving.Sp1) to neo-zkvm's NeoProver."

[lib]
name = "neo_zkvm_bridge"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# The bridge re-exports neo-zkvm's prover/verifier behind a stable C ABI.
# neo-zkvm is vendored as a git submodule at external/neo-zkvm (init via
# `git submodule update --init --recursive`). Wire as a crates.io dep when
# neo-zkvm gets published.
neo-zkvm-prover = { path = "../../external/neo-zkvm/crates/neo-zkvm-prover", optional = true }
bincode = { version = "3.0", optional = true }

[features]
# Disabled by default so the bridge crate can be cargo-checked without neo-zkvm
# being on the build host. Real deploys enable this feature to link the prover in.
default = []
real-prover = ["dep:neo-zkvm-prover", "dep:bincode"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
