[package]
name = "neo-zkvm-gateway-guest"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "SP1 recursive Gateway guest for canonical Neo N4 batch proofs."
build = "build.rs"

[lib]
name = "neo_zkvm_gateway_guest"
path = "src/lib.rs"

[[bin]]
name = "neo-zkvm-gateway-guest"
path = "src/main.rs"
test = false

[features]
default = []
test-only-vk = []

[dependencies]
sha2 = { version = "0.10.8", default-features = false }
sp1-zkvm = { version = "=6.2.1", features = ["verify"] }

[dev-dependencies]
hex = "0.4"
