[package]
name = "neo-zkvm-guest"
version = "0.1.0"
edition = "2021"
description = "SP1 ZK guest program: deterministic Neo L2 batch executor that the SP1 prover proves correct."

[lib]
name = "neo_zkvm_guest"
path = "src/lib.rs"

[[bin]]
name = "neo-zkvm-guest"
path = "src/main.rs"
# Skip the bin in `cargo test` host runs — it's the SP1 zkVM
# entrypoint, and `sp1_zkvm::entrypoint!(main)` macro exits with a
# non-zero status when invoked outside the zkVM (process exits 160
# locally / 192 in CI; either way the test harness interprets
# non-zero as failure even though main() returns normally). The
# lib's unit tests cover the host-runnable logic; the bin gets
# exercised by the real-zkVM job (`cargo build + test
# (neo-zkvm-host, real SP1 zkVM)`) which cargo-prove-builds the
# RISC-V ELF and runs it inside SP1.
test = false

[dependencies]
sha2 = { version = "0.10", default-features = false }
sp1-zkvm = "6.0"
# Real Neo N3 VM in Rust — vendored via the external/neo-zkvm submodule.
# Each tx in a batch becomes a ProofInput that gets executed by neo_vm_guest::execute,
# so this guest proves "I ran NeoVM" not "I hashed the bytes".
neo-vm-guest = { path = "../../external/neo-zkvm/crates/neo-vm-guest" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
