[package]
name = "neo-zkvm-host"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Real SP1 host that loads neo-zkvm-guest's RISC-V ELF, runs it via SP1's prover, and produces a verifiable ZK proof of L2 batch execution."
# build.rs invokes `cargo prove build` against ../neo-zkvm-guest and exposes
# the produced RISC-V ELF path via the NEO_ZKVM_GUEST_ELF env var so lib.rs
# can `include_bytes!()` it. (Cargo silently ignores `build` keys placed
# inside other tables like [[bin]] — keep this under [package].)
build = "build.rs"

[dependencies]

[target.'cfg(unix)'.dependencies]
sp1-sdk = { version = "=6.2.1", features = ["blocking"] }
# bincode v1 is REQUIRED for on-chain proof format stability. Proof bytes
# (SP1ProofWithPublicValues + SP1VerifyingKey) are serialized with bincode v1
# and stored on L1 by SettlementManager. Upgrading to v2 would change the
# wire format and break verification of all existing on-chain proofs.
# Migration requires: dual-format deserialization (try v1, fallback v2) OR
# a coordinated L1 contract upgrade with proof format versioning.
bincode = "2.0"
# Unix signal handling for the prove-batch daemon's SIGTERM/SIGINT graceful
# shutdown. Without this a SIGTERM under k8s/systemd would land mid-proof
# (proofs can take ~40s), losing the in-flight work to the kill-after-grace.
# Matches the eth watcher's libc-based signal handler in
# watchers/neo-bridge-watcher-eth/src/bin/neo-bridge-watcher-eth.rs.
libc = "0.2"

[dev-dependencies]
# For test builds — not pulled in for the production lib.
serial_test = "3.0"
neo-zkvm-guest = { path = "../neo-zkvm-guest" }

[[bin]]
name = "prove-batch"
path = "src/bin/prove_batch.rs"
