[package]
name = "neo-n4-sdk"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Typed Rust SDK for the Neo Elastic Network L2 RPC surface (doc.md §14.1)"
license = "MIT"

[dependencies]
hex = "0.4"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52", features = ["macros", "rt"] }

[dev-dependencies]
mockito = "1.4"
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.11"
tokio = { version = "1.52", features = ["macros", "rt", "test-util"] }
