[package]
name = "neo-bridge-watcher-eth"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Off-chain watcher daemon for Neo Elastic Network's Eth ↔ Neo external bridge. Default features ship the messaging + signing + orchestration core (no networking deps). Build with `--features live-rpc` for the runnable daemon binary, which wires HTTP JSON-RPC adapters (Eth event source + Neo submitter pre-check) and a flat-file journal."

[lib]
name = "neo_bridge_watcher_eth"
path = "src/lib.rs"

# Daemon binary — wires the four live trait impls together (FileSigner +
# EthRpcEventSource + NeoRpcSubmitter + FileJournal) into a runnable v0
# watcher daemon. Behind `live-rpc` because the bin needs the live impls;
# default `cargo test` doesn't compile this target.
[[bin]]
name = "neo-bridge-watcher-eth"
path = "src/bin/neo-bridge-watcher-eth.rs"
required-features = ["live-rpc"]

[dependencies]
# secp256k1 ECDSA (used by both Eth and Neo verifiers — same curve, same hash).
k256 = { version = "0.13", features = ["ecdsa", "sha2"] }
sha2 = "0.10"
# Zero the read-buffer + signing-key bytes after use so a core dump or
# memory-disclosure bug can't leak the signing key. k256's SigningKey is
# already ZeroizeOnDrop internally; the wrapper here is for the read buffer
# in FileSigner::from_file and any in-flight key material on the call frame.
zeroize = { version = "1.8", features = ["derive"] }
# Compact error types for the watcher's failure modes.
thiserror = "2.0"
hex = "0.4"

# Live RPC dependencies, gated behind the `live-rpc` feature so default
# `cargo test` keeps a lean dep tree (the messaging + signing + orchestration
# core has no networking deps). Operators flip on `live-rpc` to compile the
# concrete EthEventSource impl + the runnable daemon binary.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tiny-keccak = { version = "2.0", features = ["keccak"], optional = true }
# Daemon config format. Pulled in by the daemon binary only.
toml = { version = "0.8", optional = true }
# OS-level advisory file locking for FileJournal (flock on Unix). Prevents
# two watcher processes from accidentally racing on the same journal
# directory and corrupting consumed.log's 12-byte record alignment with
# interleaved appends.
libc = { version = "0.2", optional = true }

[features]
default = []
# Pulls the JSON-RPC HTTP client (reqwest blocking) + JSON serde + keccak
# (for computing the Locked event topic) + TOML config parsing for the
# daemon binary. Operators run `cargo build --features live-rpc` to
# produce the runnable daemon.
live-rpc = ["dep:reqwest", "dep:serde", "dep:serde_json", "dep:tiny-keccak", "dep:toml", "dep:libc"]

[dev-dependencies]
# Test-vector helpers.
rand = "0.8"
