[package]
name = "neo-bridge-watcher-sol"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Off-chain watcher daemon for Neo Elastic Network's Solana ↔ Neo external bridge. Uses ed25519 signatures (vs Eth/Tron's secp256k1+SHA256) — same wire format otherwise. Validates that the Phase B Signer trait abstraction works for both curve families."

[lib]
name = "neo_bridge_watcher_sol"
path = "src/lib.rs"

[dependencies]
neo-bridge-watcher-eth = { path = "../neo-bridge-watcher-eth" }
ed25519-dalek = { version = "2.1", default-features = false, features = ["rand_core", "fast"] }
thiserror = "2.0"

[dev-dependencies]
hex = "0.4"
